# cc-voice-plugin-prototype

./: .bandit  .cc-tts.example.toml  .cc-voice.example.toml  .cc-voice.toml  .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  AGENT_LEARNINGS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  lychee.toml  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: hardening.md
.github/: dependabot.yaml
.github/scripts/: create_pr.sh  delete_branch_pr_tag.sh
.github/workflows/: bump-my-version.yaml  links-fail-fast.yaml
assets/audio/: cc-tts-summary-transcript.md
docs/: architecture.md
docs/adr/: 0001-tts-delivery-modes.md  0001-vlm-screen-sharing.md  0002-stt-engine-selection.md  0002-tts-delivery-modes.md  0003-vlm-screen-sharing.md
docs/roadmap/: v0.5.x.md
hooks/: hooks.json
scripts/: debug_pty_capture.py
skills/listen/: SKILL.md
skills/see/: SKILL.md
skills/speak/: SKILL.md
src/cc_stt/: __init__.py  __main__.py  config.py  engine.py  hook_handler.py  intents.py  listen.py  mic.py  preprocess.py  pty_input.py  utterance_buffer.py
src/cc_tts/: __init__.py  __main__.py  config.py  edge_stream.py  engine.py  hook_handler.py  player.py  preprocess.py  pty_proxy.py  repl.py  sentence_buffer.py  speak.py  stream_filter.py  stream_json.py  tts_worker.py
src/cc_vlm/: __init__.py  __main__.py  cache.py  capture.py  config.py  engine.py  processor.py  templates.py
src/cc_voice_common/: __init__.py  config.py
tests/: test_bump_scripts.bats  test_config.py  test_edge_stream.py  test_engine.py  test_hook_handler.py  test_player.py  test_plugin_config.py  test_preprocess.py  test_pty_proxy.py  test_repl.py  test_sentence_buffer.py  test_speak.py  test_stream_filter.py  test_stream_json.py  test_stt_config.py  test_stt_engine.py  test_stt_hook_handler.py  test_stt_intents.py  test_stt_listen.py  test_stt_mic.py  test_stt_preprocess.py  test_stt_pty_input.py  test_stt_utterance_buffer.py  test_tts_worker.py  test_vlm_cache.py  test_vlm_capture.py  test_vlm_config.py  test_vlm_engine.py  test_vlm_main.py  test_vlm_processor.py  test_vlm_templates.py
