[project]
name = "cc-tts"
version = "0.1.0"
description = "Text-to-speech output plugin for Claude Code"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "qte77" }]
dependencies = []

[project.optional-dependencies]
piper = ["piper-tts>=1.2.0"]
edge = ["edge-tts>=6.1.0"]
all = ["piper-tts>=1.2.0", "edge-tts>=6.1.0"]
dev = ["ruff>=0.9.0", "pyright>=1.1.390"]
test = ["pytest>=8.0", "pytest-cov>=6.0"]

[project.scripts]
cc-tts = "cc_tts.speak:main"
cc-tts-wrap = "cc_tts.pty_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_tts"]


# MARK: Linting


[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.ruff.format]
docstring-code-format = true


# MARK: Type checking


[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = false


# MARK: Testing


[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
include = ["src/**/*.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
]
