[project]
name = "cc-voice"
version = "0.4.0"
description = "End-to-end voice plugin for Claude Code — TTS output and STT input"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "qte77" }]
dependencies = []

[project.optional-dependencies]
piper = ["piper-tts>=1.2.0"]
edge = ["edge-tts>=7.2.8"]
stt = ["sounddevice>=0.5.0"]
all = ["piper-tts>=1.2.0", "edge-tts>=7.2.8", "sounddevice>=0.5.0"]
dev = ["ruff>=0.15.10", "pyright>=1.1.408", "bump-my-version>=1.3.0"]
test = ["pytest>=9.0.3", "pytest-cov>=6.0"]

[project.scripts]
cc-tts = "cc_tts.speak:main"
cc-tts-wrap = "cc_tts.pty_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_tts", "src/cc_stt"]


# MARK: Linting


[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.ruff.format]
docstring-code-format = true


# MARK: Type checking


[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = false       # prevents OOM on small venvs
reportMissingTypeStubs = false       # fixes sounddevice stub error
reportUnknownMemberType = "none"     # fixes untyped config leakage
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"


# MARK: Testing


[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
include = ["src/**/*.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
]


# MARK: Version bumping


[tool.bumpversion]
current_version = "0.4.0"
commit = true
tag = true
tag_name = "v{new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/cc_tts/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/cc_stt/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = ".claude-plugin/plugin.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = ".claude-plugin/marketplace.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "version-{current_version}-58f4c2"
replace = "version-{new_version}-58f4c2"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"
